added couple of holidays which will be in scope for Romania in 2017 + adjusted test to include these

--- a/tests/php-unit/testdox.html
+++ b/tests/php-unit/testdox.html
@@ -30,13 +30,14 @@
     <body>
         <h2 id="RomanianTest">Romanian</h2>
         <ul>
-            <li style="color: #555753;">✓ Holidays fixed but working included</li>
             <li style="color: #555753;">✓ Holidays easter 2015 catholic easter first day</li>
             <li style="color: #555753;">✓ Holidays easter 2015 catholic easter second day</li>
             <li style="color: #555753;">✓ Holidays easter 2015 first day of year</li>
             <li style="color: #555753;">✓ Holidays easter 2015 last day of year</li>
             <li style="color: #555753;">✓ Holidays easter 2015 orthodox easter first day</li>
             <li style="color: #555753;">✓ Holidays easter 2015 orthodox easter second day</li>
+            <li style="color: #555753;">✓ Holidays fixed but working included</li>
+            <li style="color: #555753;">✓ Holidays fixed new in 2017</li>
             <li style="color: #555753;">✓ Holidays in month for month with catholic easter</li>
             <li style="color: #555753;">✓ Holidays in month for month without catholic easter</li>
             <li style="color: #555753;">✓ Working days in month for month of 19 days</li>
