tweaks on PHPUnit script and respective results

--- a/tests/php-unit/testdox.html
+++ b/tests/php-unit/testdox.html
@@ -28,7 +28,7 @@
         </style>
     </head>
     <body>
-        <h2 id="danielgp\bank_holidays\RomanianTest">danielgp\bank_holidays\Romanian</h2>
+        <h2 id="RomanianTest">Romanian</h2>
         <ul>
             <li style="color: #555753;">✓ Holidays easter 2015 catholic easter first day</li>
             <li style="color: #555753;">✓ Holidays easter 2015 catholic easter second day</li>
